[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "provena-api"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "django-environ>=0.11",
    "django-celery-beat>=2.6",
    "django-celery-results>=2.5",
    "django-storages[s3]>=1.14",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "whitenoise>=6.7",
    "gunicorn>=22.0",
    "daphne>=4.1",
    "channels[daphne]>=4.1",
    "channels-redis>=4.2",
    "stripe>=10.0",
    "Pillow>=10.0",
    "sentry-sdk[django]>=2.0",
    "pyotp>=2.9",
    "drf-spectacular>=0.30",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "responses>=0.25",
    "ruff>=0.4",
    "django-stubs[compatible-mypy]>=5.0,<6.0",
    "djangorestframework-stubs>=3.15,<4.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
testpaths = ["apps"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=apps --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "config/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF"]
ignore = ["E501", "S101", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S106", "S105"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["migrations/", "tests/"]

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]
